<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="50dip"
    android:paddingRight="50dip" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dip"
        android:layout_marginRight="50dip"
        android:orientation="vertical"
        
        android:gravity="right" >

        <TextView
            android:id="@+id/tv_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:textSize="14sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            
            android:includeFontPadding="false"
            android:text="@string/app_name"
            android:textSize="55sp"
            android:textColor="@color/gray"
            android:typeface="monospace" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            
            android:includeFontPadding="false"
            android:text="@string/app_description"
            android:textColor="@color/about_app_description"
            android:textSize="18sp" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dip"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/bg_members"
        android:gravity="center"
        android:text="@string/members_title"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold" />
    
    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_marginTop="-1dip"
        android:background="@drawable/divider"/>

    <LinearLayout
        android:id="@+id/members"
        android:layout_width="wrap_content"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        
        android:paddingTop="40dip"/>

    <TextView
        android:id="@+id/tv_copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="15dip"
        android:text="@string/copyright"
        android:textSize="15sp" />

</LinearLayout>